# skybox-painter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  StarNestSkyboxMask-EDIT.shader
model-converter/: CMakeLists.txt  main.cpp  skyboxcube.blend  skyboxcube.blend1  skyboxcube.mtl
shaders/: default.vs  oneimage.fs  retexture.fs  retexture.vs  solidwhite.fs  starnest.fs
src/: LookAtCamera.h  Shader.h  SkyboxCube.h  TextureCube.h  imgui.ini  main.cpp  skyboxshapes.h
